[tool.poetry]
name = "xdistances"
version = "0.1.1"
description = ""
authors = ["Christopher Hua <chua@squareup.com>"]

[tool.poetry.dependencies]
python = "^3.8"
maturin = "^0.11.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["maturin>=0.11,<0.12"]
build-backend = "maturin"