[tool.poetry]
name = "xdistances"
version = "0.1.2"
description = ""
authors = ["Christopher Hua <hua.christopher@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4"
maturin = "1.2.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
